--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -46,6 +46,9 @@
     "auto-changelog": "~2.2.1",
     "react-scripts": "^4.0.1"
   },
+  "resolutions": {
+    "immer": "^8.0.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
