--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -48,6 +48,9 @@
     "jshint": "^2.12.0",
     "react-scripts": "^4.0.1"
   },
+  "resolutions": {
+    "immer": "^8.0.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
